// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkRating should render correctly 1`] = `
<AndroidBPKRatingView
  orientation="horizontal"
  size="base"
  subtitle={
    Array [
      "Low subtitle",
      "Medium subtitle",
      "High subtitle",
    ]
  }
  title={
    Array [
      "Low title",
      "Medium title",
      "High title",
    ]
  }
  value={3}
/>
`;

exports[`Android BpkRating should render correctly with all props 1`] = `
<AndroidBPKRatingView
  icon={
    Array [
      "bpk_loq",
      "bpk_med",
      "bpk_high",
    ]
  }
  orientaion="vertical"
  orientation="horizontal"
  size="icon"
  subtitle={
    Array [
      "Low subtitle",
      "Medium subtitle",
      "High subtitle",
    ]
  }
  title={
    Array [
      "Low title",
      "Medium title",
      "High title",
    ]
  }
  value={3}
/>
`;

exports[`Android BpkRating should render correctly with strings instead of arrays 1`] = `
<AndroidBPKRatingView
  icon={
    Array [
      "bpk_single icon",
    ]
  }
  orientation="horizontal"
  size="icon"
  subtitle={
    Array [
      "single sub",
    ]
  }
  title={
    Array [
      "single",
    ]
  }
  value={3}
/>
`;

exports[`Android BpkRating should spread extra properties 1`] = `
<AndroidBPKRatingView
  orientation="horizontal"
  size="base"
  style={
    Object {
      "flex": 1,
    }
  }
  subtitle={
    Array [
      "single sub",
    ]
  }
  title={
    Array [
      "single",
    ]
  }
  value={3}
/>
`;
